Fixed #76 improve text readability in Needs block

--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -89,7 +89,7 @@ $color-content-section-bg-even: $color-light-grey;
 $color-content-listing-bg: $color-light-grey;
 $color-content-edit: #fff;
 $color-content-edit-bg: $color-medium-grey;
-$color-needs: $color-text;
+$color-needs: #fff;
 $color-needs-bg: #2695cd;
 $color-needs-h3: #fff;
 $color-interested: $color-needs-h3;
