--- a/css/sass/_content.scss
+++ b/css/sass/_content.scss
@@ -378,7 +378,7 @@ div.toolbar {
 		padding: 2em;
 		h3 {
 			color: $color-needs-h3;
-			font-size: 1.2em;
+			font-size: 1.5em;
 			font-weight: bold;
 			
 		}
@@ -409,6 +409,7 @@ div.toolbar {
 			min-height: 100px;
 			margin: 1em 0;
 			padding-left: 100px;
+			font-size: 1.25em;
 			line-height: 1.25em;
 			h4 {
 				padding: 1em 0 0.25em;
